refactor: use <Table/> component

--- a/src/components/Table/styles.styl
+++ b/src/components/Table/styles.styl
@@ -12,7 +12,7 @@
     thead
         flex 0 0 em(31px, 16px)
 
-        td
+        td, th
             padding         em(8px, 12px) em(32px, 12px) // @stylint ignore
             font-size       12px
             text-transform  uppercase
@@ -37,7 +37,7 @@
         &:hover
             background-color grey-10
 
-    td
+    td, th
         box-sizing  border-box
         padding     1em 2rem
         font-size   14px
