--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -138,6 +138,7 @@
         width 100%
         height 100%
         background embedurl('../../assets/icons/actions/filter.svg') center center no-repeat alpha(silver, 0.8)
+        margin 0
 
         &.active
             background-image embedurl('../../assets/icons/actions/filter-active.svg')
