perf: use @require to import css files only once

--- a/src/ducks/filters/SelectDates.styl
+++ b/src/ducks/filters/SelectDates.styl
@@ -1,4 +1,4 @@
-@import 'cozy-ui'
+@require 'cozy-ui'
 @import '../../styles/breakpoints.styl'
 
 // Due to discrepancies between Chrome and Firefox in
