--- a/src/ducks/operations/Operations.styl
+++ b/src/ducks/operations/Operations.styl
@@ -1,6 +1,8 @@
 @require 'cozy-ui'
 
 .bnk-op-table
+    composes full-width-table from '../commons/Layout.styl'
+
     .bnk-op-date
         flex-basis 15%
     .bnk-op-desc
