--- a/src/styles/accounts.styl
+++ b/src/styles/accounts.styl
@@ -1,6 +1,7 @@
 @require 'cozy-ui'
 
 .bnk-table-account
+    composes full-width-table from '../ducks/commons/Layout.styl'
     .bnk-table-libelle
         flex-basis 30%
 
