--- a/src/styles/accounts.styl
+++ b/src/styles/accounts.styl
@@ -1,15 +1,22 @@
 @require 'cozy-ui'
+@require './breakpoints.styl'
 
 .bnk-table-account
     composes full-width-table from '../ducks/commons/Layout.styl'
+    & > tbody > tr > td
+        font-size 0.85rem
+        text-overflow ellipsis
+        overflow hidden
+        white-space nowrap
+
     .bnk-table-libelle
-        flex-basis 30%
+        flex-basis 25%
 
     .bnk-table-bank
-        flex-basis 15%
+        flex-basis 20%
 
-    .bnk-table-account
-        flex-basis 17%
+    .bnk-table-number
+        flex-basis 15%
 
     .bnk-table-type
         flex-basis 15%
@@ -18,8 +25,12 @@
         flex-basis 15%
 
     .bnk-table-actions
-        flex-basis 8%
+        flex-basis 10%
         text-align right
+
++small-screen()
+    .bnk-table-type
+        display none
 
 .bnk-action-button
     background 0
@@ -31,3 +42,25 @@
     &.icon-plus
         padding-left 1.5em
         background  embedurl('../assets/icons/icon-add.svg') left center no-repeat
+
+.info-table.info-table
+    width 100%
+    margin-bottom 1rem
+    tr
+        display table-row
+        border-bottom 0
+
+        td
+            display table-cell
+
+        &:hover
+            background transparent
+
+        td:first-child
+            font-weight bold
+            color cool-grey
+            font-variant small-caps
+            text-transform uppercase
+
+.account-settings__tab-list
+    composes full-width from '../ducks/commons/Layout.styl'
