fix: import :bug:

--- a/src/ducks/settings/Settings.styl
+++ b/src/ducks/settings/Settings.styl
@@ -1,8 +1,7 @@
 @require 'cozy-ui'
 
-
 .bnk-coz-tab-list
-    composes full-width from '../ducks/commons/Layout.styl'
+    composes full-width from '../../ducks/commons/Layout.styl'
 
 .bnk-tabs .bnk-coz-tab-list
     :first-child
