--- a/src/styles/accounts.styl
+++ b/src/styles/accounts.styl
@@ -4,7 +4,7 @@
 .bnk-table-account
     composes full-width-table from '../ducks/commons/Layout.styl'
     & > tbody > tr > td
-        font-size 0.85rem
+        font-size .85rem
         text-overflow ellipsis
         overflow hidden
         white-space nowrap
