refactor: use Table

--- a/src/styles/groupes.styl
+++ b/src/styles/groupes.styl
@@ -29,17 +29,11 @@
     input[type=text]
         width 100%
 
-.coz-table-modal
-    width           100%
+.groupAccountLabel
+    flex-basis 50%
 
-    .bnk-table-acct-number
-        color cool-grey
+.groupAccountNumber
+    flex-basis 30%
 
-    .coz-table-cell
-        flex 0 0 33%
-
-        &:first-child
-            padding-left 0
-        &:last-child
-            padding-right 0
-            text-align right
+.groupAccountToggle
+    flex-basis 20%
