--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,5 +1,10 @@
 @import 'cozy-ui/defaults'
 @require 'cozy-ui'
 
+h4
+    margin-top 0
+    margin-bottom 1rem
+
 :global
   // Global utils classes comes here
+
