--- a/src/ducks/settings/Settings.styl
+++ b/src/ducks/settings/Settings.styl
@@ -1,8 +1,14 @@
 @require 'cozy-ui'
+@require '../../styles/breakpoints.styl'
 
 .bnk-coz-tab-list
     composes full-width from '../../ducks/commons/Layout.styl'
 
 .bnk-tabs .bnk-coz-tab-list
-    :first-child
-        padding-left 30px
+    +small-screen()
+        display flex
+
+        & > *
+            width 100%
+            text-align center
+
