--- a/src/styles/accounts.styl
+++ b/src/styles/accounts.styl
@@ -65,4 +65,4 @@
 
             td:first-child
                 color cool-grey
-                font-size 0.85rem
+                font-size .85rem
