refactor: move ensureHasAccounts logic

--- a/src/ducks/onboarding/styles.styl
+++ b/src/ducks/onboarding/styles.styl
@@ -1,6 +1,8 @@
 @require '../../styles/breakpoints.styl'
 
 .Onboarding
+    margin-left auto
+    margin-right auto
     h2
         text-align center
 
@@ -24,3 +26,6 @@
 
     &__connect
         text-align center
+
+    &__loading
+        margin 0 auto
