--- a/src/ducks/settings/Settings.styl
+++ b/src/ducks/settings/Settings.styl
@@ -1,12 +1,15 @@
 @require 'cozy-ui'
 @require '../../styles/breakpoints.styl'
+@require '../../ducks/commons/Layout.styl'
 
 .bnk-coz-tab-list
     composes full-width from '../../ducks/commons/Layout.styl'
+    padding-left content-padding
 
 .bnk-tabs .bnk-coz-tab-list
     +small-screen()
         display flex
+        padding-left 0
 
         & > *
             width 100%
