--- a/src/ducks/onboarding/Onboarding.styl
+++ b/src/ducks/onboarding/Onboarding.styl
@@ -3,9 +3,16 @@
 .Onboarding
     margin-left auto
     margin-right auto
+
     h2
         text-align center
-        margin-bottom 2rem
+        margin 3rem 0
+
+    h3
+        margin-bottom 0
+
+    p
+        line-height 1.25
 
     &__sections
         display flex
@@ -22,8 +29,8 @@
         +small-screen()
             max-width auto
 
-    &__icon
-        width 100px
+            &:nth-child(2), &:nth-child(3)
+                display none
 
     &__connect
         text-align center
