--- a/src/ducks/categories/styles.styl
+++ b/src/ducks/categories/styles.styl
@@ -38,7 +38,7 @@
 
 // Table
 .bnk-table-category
-    composes full-width-table from '../commons/Layout.styl'
+    composes full-width-table from '../../components/Layout/Layout.styl'
     tbody tr
         cursor  pointer
 
