--- a/src/ducks/operations/Operations.styl
+++ b/src/ducks/operations/Operations.styl
@@ -1,7 +1,7 @@
 @require 'cozy-ui'
 
 .bnk-op-table
-    composes full-width-table from '../commons/Layout.styl'
+    composes full-width-table from '../../components/Layout/Layout.styl'
 
     .bnk-op-date
         flex-basis 15%
