--- a/src/ducks/settings/Settings.styl
+++ b/src/ducks/settings/Settings.styl
@@ -1,9 +1,9 @@
 @require 'cozy-ui'
 @require '../../styles/breakpoints.styl'
-@require '../../ducks/commons/Layout.styl'
+@require '../../components/Layout/Layout.styl'
 
 .bnk-coz-tab-list
-    composes full-width from '../../ducks/commons/Layout.styl'
+    composes full-width from '../../components/Layout/Layout.styl'
     padding-left content-padding
 
 .bnk-tabs .bnk-coz-tab-list
