--- a/src/styles/accounts.styl
+++ b/src/styles/accounts.styl
@@ -3,7 +3,7 @@
 
 .AcnsStg
     &__accounts
-        composes full-width-table from '../ducks/commons/Layout.styl'
+        composes full-width-table from '../components/Layout/Layout.styl'
 
         td
             font-size .85rem
@@ -44,7 +44,7 @@
 
 .AcnStg
     &__tabList
-        composes full-width from '../ducks/commons/Layout.styl'
+        composes full-width from '../components/Layout/Layout.styl'
 
     +small-screen()
         &__tabList
