--- a/src/styles/groupes.styl
+++ b/src/styles/groupes.styl
@@ -3,7 +3,7 @@
 
 .GrpsStg
     &__table
-        composes full-width-table from '../ducks/commons/Layout.styl'
+        composes full-width-table from '../components/Layout/Layout.styl'
 
         td
             font-size .85rem
@@ -37,7 +37,7 @@
         flex-basis 20%
 
     &__table
-        composes full-width-table from '../ducks/commons/Layout.styl'
+        composes full-width-table from '../components/Layout/Layout.styl'
 
     &__form
         @extend $form
