--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -1,7 +1,7 @@
 @require 'cozy-ui'
 
 .balance-table
-    composes full-width-table from '../commons/Layout.styl'
+    composes full-width-table from '../../components/Layout/Layout.styl'
 
 .balance
     .kpi
