--- a/src/ducks/onboarding/Hero.styl
+++ b/src/ducks/onboarding/Hero.styl
@@ -6,7 +6,7 @@
 
     &__title
         text-align center
-        margin 3rem 0
+        margin-bottom 3rem
 
     &__subtitle
         margin-bottom 0
