--- a/src/components/Layout/Layout.styl
+++ b/src/components/Layout/Layout.styl
@@ -19,6 +19,7 @@ padded-content(pad)
 content-padding = 2em
 
 .coz-content
+    width 100%
     padded-content(content-padding)
 
     +small-screen()
