feat: add styleguide

--- a/src/styles/media.styl
+++ b/src/styles/media.styl
@@ -1,5 +1,12 @@
 .media
     display flex
     align-items center
+
+.media--top
+    align-items flex-start
+
+.media--bottom
+    align-items flex-end
+
 .bd
     flex 1 1 auto
