refactor: remove deprecated greys

--- a/src/components/Table/styles.styl
+++ b/src/components/Table/styles.styl
@@ -7,7 +7,7 @@
     flex-direction  column
     flex            1 1 100%
     text-align      left
-    color           grey-11
+    color           cool-grey
 
     thead
         flex 0 0 em(31px, 16px)
@@ -32,10 +32,10 @@
         align-items     center
         flex            0 0 auto
         width           100%
-        border-bottom   1px solid grey-09
+        border-bottom   1px solid silver
 
         &:hover
-            background-color grey-10
+            background-color pale-grey
 
     td, th
         box-sizing  border-box
