--- a/src/ducks/commons/Topbar.styl
+++ b/src/ducks/commons/Topbar.styl
@@ -42,5 +42,5 @@ $coz-bar-size = 48px
         overflow hidden
         background-color white
         display block
-        border-bottom 1px solid grey-09
+        border-bottom 1px solid silver
         box-sizing border-box
