--- a/src/ducks/filters/SelectDates.styl
+++ b/src/ducks/filters/SelectDates.styl
@@ -39,7 +39,7 @@ select-date-width=20rem
     background transparent
     border-radius 4px
     box-sizing border-box
-    border 1px solid grey-03
+    border 1px solid silver
     padding 1em
     outline 0
     cursor pointer
