--- a/src/ducks/settings/AccountsSettings.styl
+++ b/src/ducks/settings/AccountsSettings.styl
@@ -3,7 +3,7 @@
 
 .AcnsStg
     &__accounts
-        composes full-width-table from '../components/Layout/Layout.styl'
+        composes full-width-table from '../../components/Layout/Layout.styl'
 
         td
             font-size .85rem
@@ -13,7 +13,7 @@
 
     &__libelle
         flex-basis 25%
-        composes mobile-row-main from '../components/Table/styles.styl'
+        composes mobile-row-main from '../../components/Table/styles.styl'
 
     &__bank
         flex-basis 20%
@@ -36,15 +36,15 @@
         text-align right
 
     &__accountRow
-        composes mobile-row from '../components/Table/styles.styl'
-        composes nav-row from '../ducks/commons/mobile.styl'// @stylint ignore
+        composes mobile-row from '../../components/Table/styles.styl'
+        composes nav-row from '../commons/mobile.styl'// @stylint ignore
 
     &__bank, &__number
-        composes mobile-row-label from '../components/Table/styles.styl'
+        composes mobile-row-label from '../../components/Table/styles.styl'
 
 .AcnStg
     &__tabList
-        composes full-width from '../components/Layout/Layout.styl'
+        composes full-width from '../../components/Layout/Layout.styl'
 
     +small-screen()
         &__tabList
