--- a/src/ducks/settings/GroupsSettings.styl
+++ b/src/ducks/settings/GroupsSettings.styl
@@ -1,5 +1,6 @@
 @require 'cozy-ui'
 @require '../../styles/breakpoints.styl'
+@require '../../styles/mixins.styl'
 
 .GrpsStg
     &__table
@@ -13,10 +14,12 @@
 
     &__label
         flex 0 0 50%
+        maxed-flex-basis 50%
         composes mobile-row-main from '../../components/Table/styles.styl'
 
     &__accounts
         flex 0 0 50%
+        maxed-flex-basis 50%
         composes mobile-row-label from '../../components/Table/styles.styl'
 
         +small-screen()
@@ -29,12 +32,15 @@
 .GrpStg
     &__accntLabel
         flex-basis 50%
+        maxed-flex-basis 50%
 
     &__accntNumber
         flex-basis 30%
+        maxed-flex-basis 30%
 
     &__accntToggle
         flex-basis 20%
+        maxed-flex-basis 20%
 
     &__table
         composes full-width-table from '../../components/Layout/Layout.styl'
