--- a/src/ducks/categories/styles.styl
+++ b/src/ducks/categories/styles.styl
@@ -25,9 +25,8 @@
     .bnk-cat-chart
         flex-basis 50%
 
-@media (max-width: (768/basefont)rem)
++medium-screen()
     .bnk-cat-top
-
         .bnk-cat-form
             flex-basis 100%
 
