--- a/src/ducks/operations/OperationsPage.styl
+++ b/src/ducks/operations/OperationsPage.styl
@@ -1,8 +1,5 @@
 @require 'cozy-ui'
-
-.bnk-mov-form
-    display         flex
-    flex-direction  row
+@require '../../styles/breakpoints.styl'
 
 .bnk-mov-figures
     margin          1em 0
